# MIA_1S2026_P1_202300689

./: AUDITORIA_DISEÑO_MODULO_SESION_PDF.md  AUDITORIA_ESTRUCTURAS_EXT2_PDF.md  AUDITORIA_PDF_MIA.md  CHECKLIST_REVISION_ACADEMICA_PDF.md  CMakeLists.txt  DISEÑO_COMANDO_CAT_PDF.md  DISEÑO_COMANDO_LOGIN_PDF.md  DISEÑO_COMANDO_LOGOUT_PDF.md  DISEÑO_COMANDO_MKGRP_PDF.md  DISEÑO_COMANDO_MKUSR_PDF.md  DISEÑO_COMANDO_RMGRP_PDF.md  DISEÑO_MKFS_PDF.md  EVALUACION_AVANCE_PROYECTO_PDF.md  README.md  SIGUIENTE_COMANDO_PDF.md  VALIDACION_MKFS_PDF_ESTRICTA.md  VALIDACION_SUPERBLOCK_MKFS_PDF.md
backend/: main.cpp
backend/analyzer/: lexer.cpp  parser.cpp  parser.h
backend/commands/disk/: fdisk.cpp  fdisk.h  mkdisk.cpp  mkdisk.h  rmdisk.cpp  rmdisk.h
backend/commands/fs/: cat.cpp  cat.h  mkdir.cpp  mkdir.h  mkfile.cpp  mkfile.h  mkfs.cpp  mkfs.h
backend/commands/mount/: mount.cpp  mount.h
backend/commands/reports/: rep.cpp  rep.h
backend/commands/users/: chgrp.cpp  login.cpp  logout.cpp  mkgrp.cpp  mkusr.cpp  rmgrp.cpp  rmusr.cpp  users_commands.h
backend/disk/: ebr.h  mbr.h  partition.h
backend/filesystem/: bitmap.h  blocks.h  inode.h  superblock.h
backend/manager/: disk_manager.cpp  fs_manager.cpp  fs_manager.h  mount_manager.cpp  mount_manager.h  session_manager.cpp  session_manager.h
backend/reports/: generator.cpp  graphviz.cpp
backend/server/: http_server.cpp  http_server.h
backend/utils/: debug_ebr.cpp  debug_ebr.h  debug_mbr.cpp  debug_mbr.h  file_manager.cpp  helpers.cpp  logger.cpp
docs/: Manual_Tecnico.md
frontend/: app.js  index.html  styles.css
scripts/: build.sh  test_fdisk_extended.sh
